fix(Marketview): marketview card aligning css shortened

--- a/src/client/containers/Marketview/style.scss
+++ b/src/client/containers/Marketview/style.scss
@@ -330,7 +330,7 @@
 }
 .chartSectionBadge {
   display: block;
-  margin: 40px 0 56px 0;
+  margin: 40px 0 56px;
   text-align: center;
 
   span {
